z-index for back link (firefox fix)

--- a/app/static/css/main.css
+++ b/app/static/css/main.css
@@ -28,6 +28,7 @@ a#back-link {
   top: 6rem;
   color: grey;
   opacity: .4;
+  z-index: 2000;
 }
 a#back-link:hover {
   opacity: .8;
